<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/expletus_sans"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/expletus_sans"
        android:gravity="center"
        android:text="@string/email_id"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/institution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/expletus_sans"
        android:gravity="center"
        android:text="@string/institution_name"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/expletus_sans"
        android:gravity="center"
        android:text="@string/mobile_number"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mock_test_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@layout/rounded_button"
        android:gravity="center"
        android:padding="3dp"
        android:text=""
        android:fontFamily="@font/expletus_sans"
        android:textStyle="bold"
        android:textColor="#0087bf" />

    <Button
        android:id="@+id/take_test_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@layout/rounded_button"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/take_test"
        android:fontFamily="@font/expletus_sans"
        android:textStyle="bold"
        android:textColor="#0087bf" />

</LinearLayout>
