<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/expletus_sans"
        android:gravity="center"
        android:text="@string/signup_page_name"
        android:textColor="#ffffff"
        android:textSize="24dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_cardCollapsedHeight="2dp"
                app:mtf_image="@drawable/name"
                app:mtf_labelColor="#fff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/expletus_sans"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColorHint="#ffffff" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:buttonTint="#ffffff"
                    android:checked="true"
                    android:paddingLeft="15dp"
                    android:text="@string/radio_male"
                    android:fontFamily="@font/expletus_sans"
                    android:textColor="#ffffff" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:buttonTint="#ffffff"
                    android:checked="false"
                    android:paddingLeft="15dp"
                    android:text="@string/radio_female"
                    android:fontFamily="@font/expletus_sans"
                    android:textColor="#ffffff" />

            </RadioGroup>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                app:mtf_cardCollapsedHeight="2dp"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_image="@drawable/institution"
                app:mtf_labelColor="#fff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/institution_name"
                    android:fontFamily="@font/expletus_sans"
                    android:inputType="text"
                    android:textColorHint="#ffffff" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                app:mtf_cardCollapsedHeight="2dp"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_image="@drawable/department"
                app:mtf_labelColor="#fff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/department"
                    android:fontFamily="@font/expletus_sans"
                    android:inputType="text"
                    android:textColorHint="#ffffff" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                app:mtf_cardCollapsedHeight="2dp"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_image="@drawable/email"
                app:mtf_labelColor="#fff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email_id"
                    android:fontFamily="@font/expletus_sans"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#ffffff" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                app:mtf_cardCollapsedHeight="2dp"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_image="@drawable/phone"
                app:mtf_labelColor="#fff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:fontFamily="@font/expletus_sans"
                    android:inputType="phone"
                    android:textColorHint="#ffffff" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                app:mtf_cardCollapsedHeight="2dp"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_image="@drawable/password"
                app:mtf_labelColor="#fff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:fontFamily="@font/expletus_sans"
                    android:inputType="textPassword"
                    android:textColorHint="#ffffff" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@layout/rounded_button"
                android:fontFamily="@font/expletus_sans"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signup_btn"
                android:textColor="#0087bf"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>