<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/expletus_sans"
        android:gravity="center"
        android:text="@string/login_page_name"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                app:mtf_image="@drawable/phone"
                app:mtf_cardCollapsedHeight="2dp"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_labelColor="#fff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:fontFamily="@font/expletus_sans"
                    android:inputType="phone"
                    android:textColorHint="#ffffff" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                app:mtf_image="@drawable/password"
                app:mtf_cardCollapsedHeight="2dp"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_labelColor="#fff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:fontFamily="@font/expletus_sans"
                    android:inputType="textPassword"
                    android:textColorHint="#ffffff" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="50dp"
                android:background="@layout/rounded_button"
                android:fontFamily="@font/expletus_sans"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login_btn"
                android:textColor="#0087bf"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/expletus_sans"
                android:gravity="center"
                android:text="@string/signup_link"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>